fixing image stretching on mobile

--- a/brightonfemcol/static/scss/layout.scss
+++ b/brightonfemcol/static/scss/layout.scss
@@ -883,6 +883,7 @@ dd {
             border-left: none;
             border-right: none;
             width: 100%;
+            height: auto;
           }
           aside {
             margin-right: 0px;
@@ -907,6 +908,7 @@ dd {
           width: 100%;
           border-left: none;
           border-right: none;
+          height: auto;
         }
       }
       article:nth-child(1) {
